feat: initial draft for auth